# tesla-dashboard

./: CMakeLists.txt  main.cpp  qml.qrc
backend/Controllers/: LocationController.h  SystemController.h  TemperatureController.h  VolumeController.h
backend/Controllers/Implementation/: LocationController.cpp  SystemController.cpp  TemperatureController.cpp  VolumeController.cpp
ui/: Main.qml
ui/LeftScreen/: LeftScreen.qml
ui/RightScreen/: MapConfig.qml  MarkerPoint.qml  RightScreen.qml  SearchBar.qml  TopBar.qml
ui/TaskBar/: Acclimatization.qml  Volume.qml
